Fix red contrast DM End Date and Days On Hold to match.
Days to DM End Date on landing page:

- darker red to fix contrast as per WCAG warning
- ensured all red boxes are the same size (just for asthetics!)

Days On Hold:

- Introduced classes for all 3 warning circle colours. I think we need to have a set of these more generally to ensure all colours are consistent.
- Switched red to that set above
- Reduced circle size

--- a/src/Portal/Portal/wwwroot/css/site.css
+++ b/src/Portal/Portal/wwwroot/css/site.css
@@ -307,14 +307,31 @@ table > tbody > tr > th {
     width: 68px;
 }
 
+
+/* DAYS ON HOLD WARNING START */
+.onHoldRedCircle {
+    color: #cd2026;
+}
+.onHoldAmberCircle {
+    color: #ff8c00;
+}
+.onHoldGreenCircle {
+    color: #008000;
+}
+/* DAYS ON HOLD WARNING END */
+
 .alertText {
     border-radius: .25rem;
-    padding: .25rem .50rem;
     color: white;
+    font-weight: 400;
+    min-width: 1rem;
+    max-width: 3.0rem;
+    max-height: 1.75rem;
+    text-align: center;
 }
 
     .alertText.red {
-        background-color: red;
+        background-color: #cd2026;
     }
 
     .alertText.amber {
